--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+.fa {
+  padding: 2px;
+  font-size: 10px;
+  width: 10px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  color: #ffffff;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.container {
+  width: 60px;
+  background: #2c3e50; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #3498db; 
+  border-radius: 10px; 
+  margin: auto; 
+  padding: 10px; 
+}
+
+.heading {
+  font-size: 8px;
+  font-weight: bold;
+  margin-bottom: 5px; 
+  color: #ecf0f1; 
+}
+
+.subheading {
+  font-size: 4px;
+  color: #bdc3c7; 
+  margin-bottom: 5px; 
+}
+
+.icon-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.outer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
+</style>
+</head>
+<body>
+<center>
+
+<div class="outer-container">
+  <div class="heading"><p>oops!</p>
+<p>Site is under maintenance</p></div>
+  
+  <div class="container">
+    <div class="subheading">Find me here</div>
+  
+    <div class="icon-container">
+      <a href="https://twitter.com/_prakaaash_" class="fa fa-twitter"></a>
+      <a href="https://www.instagram.com/prakashtimalsina_" class="fa fa-instagram"></a>
+      <a href="mailto:prakashtimalsina318@gmail.com" class="fa fa-envelope"></a>
+    </div>
+  </div>
+</div>
+</center>
+</body>
+</html>
+
