--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <center>
 
 <div class="outer-container">
-  <div class="heading"><p>oops!</p>
+  <div class="heading"><p>hello there!</p>
 <p>Site is under maintenance</p></div>
   
   <div class="container">
