--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   
     <div class="icon-container">
       <a href="https://twitter.com/_prakaaash_" class="fa fa-twitter"></a>
-    <a href="https://instagram.com/prakashtimalsina_" class="fa fa-instagram"></a>
+    <a href="https://instagram.com/_eehhhhheeee" class="fa fa-instagram"></a>
       <a href="mailto:prakashtimalsina318@gmail.com" class="fa fa-envelope"></a>
     </div>
   </div>
